<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tl="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.search.SearchFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <LinearLayout
            android:id="@+id/search_one"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="11dp"
                android:layout_height="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="-13dp"
                android:src="@mipmap/top"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/top"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/top_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-14dp"
                android:layout_marginRight="7dp"
                android:src="@mipmap/one"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/one"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/one_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="-14dp"
                android:src="@mipmap/two"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/two"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/two_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="-14dp"
                android:src="@mipmap/three"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/three"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/three_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="-14dp"
                android:src="@mipmap/four"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/four"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/four_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="-14dp"
                android:src="@mipmap/five"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/five"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/five_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="-14dp"
                android:src="@mipmap/six"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/six"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/six_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="-14dp"
                android:src="@mipmap/seven"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/seven"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/seven_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/more"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="150dp"
            android:background="@null"
            android:ellipsize="end"
            android:maxEms="8"
            android:singleLine="true"
            android:text="@string/more"
            android:textColor="@color/colorBlue"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorGrey"/>
    </LinearLayout>

</LinearLayout>