<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tl="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.search.DigitalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="-14dp"
                android:src="@mipmap/one"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_one"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_one_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-14dp"
                android:layout_marginRight="7dp"
                android:src="@mipmap/two"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_two"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_two_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="-14dp"
                android:src="@mipmap/three"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_three"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_three_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="-14dp"
                android:src="@mipmap/four"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_four"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_four_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="-14dp"
                android:src="@mipmap/five"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_five"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_five_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="-14dp"
                android:src="@mipmap/six"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_six"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_six_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="-14dp"
                android:src="@mipmap/seven"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_seven"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_seven_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="8dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="-14dp"
                android:src="@mipmap/eight"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_eight"
                    android:textColor="@color/colorBlack"
                    android:singleLine="true"
                    android:maxEms="8"
                    android:ellipsize="end"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:text="@string/D_eight_hint"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13sp"/>


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>